--- a/style.css
+++ b/style.css
@@ -9,3 +9,39 @@ ul {
   list-style: none;
   display: flex;
 }
+
+li {
+  padding: 5px;
+}
+
+#site-name {
+  padding: 5px;
+}
+
+#product-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.product {
+  text-align: center;
+}
+
+img {
+  width: 200px;
+}
+
+button {
+  background-color: #c78283;
+  border: none;
+  border-radius: 5px;
+  padding: 8px;
+}
+
+@media (max-width: 600px) {
+  .feature-container {
+    flex-direction: column;
+  }
+}
